crates/solidity/testing/snapshots/bindings_output/errors/named_args/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:3:19 ]
   │
 3 │ ╭─▶     error Failure (
   ┆ ┆   
 6 │ ├─▶     );
   │ │            
   │ ╰──────────── Error occurred here.
───╯
Error: Expected Equal or Semicolon.
   ╭─[ input.sol:8:23 ]
   │
 8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
   │                       ──────────────────────────┬─────────────────────────  
   │                                                 ╰─────────────────────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     enum Cause { InsuficientFunds, NotAuthorized, InvalidDate }
   │          ──┬──   ────────┬───────  ──────┬──────  ─────┬─────  
   │            ╰─────────────────────────────────────────────────── name: 2
   │                          │               │             │       
   │                          ╰───────────────────────────────────── name: 3
   │                                          │             │       
   │                                          ╰───────────────────── name: 4
   │                                                        │       
   │                                                        ╰─────── name: 5
 3 │     error Failure (
   │           ───┬───  
   │              ╰───── name: 6
   │ 
 7 │     function test() public {
   │              ──┬─  
   │                ╰─── name: 7
 8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
   │                ───┬───  
   │                   ╰───── name: 8
   │
   ├─[ input.sol:1:1 ]
   │
 3 │     error Failure (
   │     ──┬──  
   │       ╰──── unresolved
   │ 
 8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
   │         ───┬──  
   │            ╰──── ref: built-in
───╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
 10 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │   │       enum Cause { InsuficientFunds, NotAuthorized, InvalidDate }
    │   │   ─────────────────────────┬──────┬────────┬─────────────┬────────  
    │   │                            ╰──────────────────────────────────────── definiens: 3
    │   │                                   │        │             │          
    │   │                                   ╰───────────────────────────────── definiens: 2
    │   │                                            │             │          
    │   │                                            ╰──────────────────────── definiens: 4
    │   │                                                          │          
    │   │                                                          ╰────────── definiens: 5
  3 │   ╭─▶     error Failure (
    ┆   ┆   
  6 │ │ ├─▶     );
    │ │ │            
    │ │ ╰──────────── definiens: 6
  7 │ ╭───▶     function test() public {
    ┆ ┆     
  9 │ ├───▶     }
    │ │             
    │ ╰───────────── definiens: 7
    │
    ├─[ input.sol:1:1 ]
    │
  8 │         revert Failure({cause: Cause.NotAuthorized, details: "not owner"});
    │ ──────────────────────────────────────┬─────────────────────────────────────  
    │                                       ╰─────────────────────────────────────── definiens: 8
────╯
